# ossama-chidmi

./: README.md
basicToadvanced_exercises/: README.md
bomberman-backend-java/: README.md  allclasses-index.html  allpackages-index.html  constant-values.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  pom.xml  serialized-form.html  type-search-index.js
distributed-db-architecture/: Agence.sql  (+6 more)
storytelling-engine-cpp/libzork/: CMakeLists.txt
storytelling-engine-cpp/libzork/.cache/clangd/index/: action.hh.6852C06799A88503.idx  choice.cc.575C56B963571D4A.idx  choice.hh.353C98C57C8A6864.idx  choice.hh.DDC5A406179D052B.idx  condition.hh.020E03230CFC5BDE.idx  html.hh.12D1B1E0762D3AFA.idx  interactive.hh.C9FCE864CE820BAC.idx  main.cc.F816DF8946BCCE85.idx  network.hh.A951535D4D45BF03.idx  node.cc.7EFED825D2629F5B.idx  node.cc.D25E592116D91046.idx  node.hh.117F215AC1FBB2C9.idx  options.cc.3651FEDEA59A323A.idx  options.hh.BA061DC7B6B3C6D6.idx  runner.hh.D99E2EA01EDA1CCC.idx  smart.hh.7637D78C78E56F98.idx  store.cc.217A3335FE79EB12.idx  store.cc.802B31C54A987DC6.idx  store.hh.8F820B17558EF75E.idx  story.hh.9453C74797FDC51E.idx  utils.hh.D27FE6E8E12DB76B.idx
storytelling-engine-cpp/libzork/include/libzork/runner/: choice.hh  html.hh  interactive.hh  network.hh  runner.hh  smart.hh
storytelling-engine-cpp/libzork/include/libzork/store/: network-store.hh  store.hh
storytelling-engine-cpp/libzork/include/libzork/story/: choice.hh  node.hh  story.hh
storytelling-engine-cpp/libzork/include/libzork/variables/: action.hh  condition.hh
storytelling-engine-cpp/libzork/src/: CMakeLists.txt  choice.cc  node.cc  store.cc
storytelling-engine-cpp/libzork/test-assets/scripts/dynamic/: cave.txt  goblins.txt
storytelling-engine-cpp/libzork/test-assets/stories/static/: story.plain  story.yml
storytelling-engine-cpp/libzork/test-assets/synonyms/: ogre.yml  yaka.yml
storytelling-engine-cpp/libzork/tests/: CMakeLists.txt
storytelling-engine-cpp/libzork/tests/basics/: node.cc  store.cc  story.cc  variables.cc
storytelling-engine-cpp/libzork/tests/bonus/: smart.cc  store.cc  story.cc
storytelling-engine-cpp/libzork/tests/include/tests/: interactive.hh  runner.hh  utils.hh
storytelling-engine-cpp/libzork/tests/runner/: choice.cc  html.cc  smart.cc
storytelling-engine-cpp/libzork/zorkxplorer/: CMakeLists.txt
storytelling-engine-cpp/libzork/zorkxplorer/src/: CMakeLists.txt  main.cc  options.cc  options.hh
(+640 files in other folders)
